Updated dependencies and add lombok